--- a/DL2K0300 快速体验手册/function test/3.18_adc.md
+++ b/DL2K0300 快速体验手册/function test/3.18_adc.md
@@ -18,7 +18,7 @@ sidebar_position: 18
 ![](./img/3.18.2.png)
 </center>
 
-ADC的主要特性：
+ADC的主要特性：<br />
 &emsp;&emsp;龙芯2K0300B支持ADC功能，集成一路12bit 8通道的ADC。
 
 &emsp;&emsp;在Linux系统中，ADC采样属于IIO子系统下，可以通过sysfs提供的接口来访问ADC控制器，使用的是12位精度。
