--- a/DL2K0300 快速体验手册/function test/3.17_tf.md
+++ b/DL2K0300 快速体验手册/function test/3.17_tf.md
@@ -6,7 +6,7 @@ sidebar_position: 17
 
 # 3.17 TF（SD）卡&EMMC测试
 
-指令提示：
+指令提示：<br />
 &emsp;&emsp;time命令常用于测量一个命令的运行时间，dd 用于复制，从 if(input file)文件读出，写到 of(output file)指定的文件，bs 是每次写块的大小，count 是读写块的数量。"if=/dev/zero"不产生 IO，即可以不断输出数据，因此可以用来测试纯写速度。
 
 ## 3.17.1 SD卡测试
